# rev-arma-server-web-admin

./: .gitignore  CLAUDE.md  PLAN.md  README.md  config.json.example  package.json  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  docker.yml  node.yml
app/: main.py
app/api/: __init__.py  auth.py  logs.py  missions.py  mods.py  presets.py  servers.py  settings.py  steamcmd.py  ws.py
app/core/: config.py  logging.py  paths.py
app/domain/: logs.py  manager.py  missions.py  mods.py  server.py  settings.py
app/domain/config_writer/: basic_config.py  profile_config.py  server_config.py
app/schemas/: basic_config.py  game_types.py  log.py  mission.py  mod.py  preset.py  server.py  server_config.py  server_profile.py  settings.py  ws.py
app/services/: a2s.py  mod_cleaner.py  mod_fetcher.py  mod_linker.py  mod_migrator.py  mod_reporter.py  mod_updater.py  preset_compare.py  preset_parser.py  pubsub.py  steamcmd.py  workshop.py
frontend/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: a11y.spec.ts  app.spec.ts  glass.spec.ts  missions.spec.ts  overview.spec.ts  screenshots.spec.ts  server-detail.spec.ts  steamcmd.spec.ts  websocket.spec.ts
frontend/e2e/helpers/: api-mocks.ts
frontend/playwright-report/: index.html
frontend/src/: App.tsx  main.tsx  router.test.tsx  router.tsx
frontend/src/hooks/: useMissions.test.tsx  useMissions.ts  useMods.ts  usePresets.test.tsx  usePresets.ts  (+5 more)
lib/mods/: index.js
scripts/: migrate_servers_json.py
tests/: conftest.py
(+103 files in other folders)
