[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arma-server-web-admin"
version = "3.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-a2s>=1.3",
    "python-multipart>=0.0.12",
    "httpx>=0.27",
    "python-slugify>=8.0",
    "humanize>=4.11",
    "structlog>=24.4",
    "aiofiles>=24.1",
    "watchfiles>=0.24",
    # NOTE: do NOT add `requests` here. httpx is already listed and is async-capable.
    # arma-modlist-tools uses requests (sync), but the FastAPI port uses httpx.AsyncClient.
    # make_session(auth) → httpx.AsyncClient(auth=auth, timeout=httpx.Timeout(120.0))
]

[tool.uv]
dev-dependencies = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6",
    "httpx",          # ASGI test client (also runtime dep — already in project deps)
    "respx>=0.21",    # Mock httpx
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py"]

[tool.coverage.report]
fail_under = 80
